--- a/package.json
+++ b/package.json
@@ -13,16 +13,18 @@
     "@notion-render/client": "^0.0.2",
     "@notion-render/hljs-plugin": "^0.0.2",
     "@notionhq/client": "^2.2.15",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@tailwindcss/typography": "^0.5.13",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.6",
     "lucide-react": "^0.399.0",
+    "moment": "^2.30.1",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "swiper": "^11.1.4",
+    "shadcn-ui": "^0.8.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
