--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "embla-carousel-react": "^8.1.6",
     "lucide-react": "^0.399.0",
     "moment": "^2.30.1",
+    "mongoose": "^8.5.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
