--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "@notion-render/client": "^0.0.2",
     "@notion-render/hljs-plugin": "^0.0.2",
     "@notionhq/client": "^2.2.15",
+    "@portabletext/react": "^3.1.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.51.0",
     "@tailwindcss/typography": "^0.5.13",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -25,10 +29,13 @@
     "moment": "^2.30.1",
     "mongoose": "^8.5.0",
     "next": "14.2.4",
+    "next-sanity": "^9.4.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "sanity": "^3.51.0",
     "shadcn-ui": "^0.8.0",
+    "styled-components": "^6.1.12",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
