--- a/package.json
+++ b/package.json
@@ -10,10 +10,6 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
-    "@notion-render/bookmark-plugin": "^0.0.2",
-    "@notion-render/client": "^0.0.2",
-    "@notion-render/hljs-plugin": "^0.0.2",
-    "@notionhq/client": "^2.2.15",
     "@portabletext/react": "^3.1.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
@@ -25,8 +21,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.6",
+    "framer-motion": "^11.3.7",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.399.0",
-    "moment": "^2.30.1",
     "mongoose": "^8.5.0",
     "next": "14.2.4",
     "next-sanity": "^9.4.2",
@@ -35,7 +32,6 @@
     "react-hook-form": "^7.52.1",
     "sanity": "^3.51.0",
     "shadcn-ui": "^0.8.0",
-    "styled-components": "^6.1.12",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
